# graphql_pokeapi_rust

./: .dockerignore  .env  .gitmodules  Cargo.toml  Dockerfile  README.md
.github/workflows/: ci.yml
scripts/: start.sh
src/: db.rs  handlers.rs  lib.rs  main.rs
src/schemas/: berry.rs  contests.rs  encounters.rs  evolution.rs  games.rs  generic.rs  items.rs  mod.rs  pokemon.rs  resource_list.rs  root.rs
web/: package-lock.json  package.json  rollup.config.js
web/public/: global.css  index.html  manifest.json
web/public/scripts/: install.js
web/src/: App.svelte  Data.svelte  Loader.svelte  Pokedex.svelte
