[package]
name = "poke"
version = "0.1.0"
authors = ["Marius Reimer <reime005@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
pokerust = { git = "https://github.com/reime005/pokerust" }
actix-web = "3.3.2"
juniper = "0.15.2"
juniper_actix = "0.2.2"
syn = "=1.0.59"
actix-cors = "0.5.4"
actix-ratelimit = "0.3.1"
env_logger = "0.8"
serde = "1.0.103"
serde_json = "1.0.61"
serde_derive = "1.0.103"
